tests/snapshots/test_rpath__rpath_change-2.snap
---
source: tests/test_rpath.rs
expression: changed_macho.rpaths
---
[
    "abababababababababababaabbababababababababab",
]
