tests/snapshots/test_rpath__rpath_change.snap
---
source: tests/test_rpath.rs
expression: changed_rpath
---
LoadCommand {
    offset: 1088,
    command: Rpath(
        RpathCommand {
            cmd: 2147483676,
            cmdsize: 64,
            path: 12,
        },
    ),
}
